# sakura-mail

./: .gitignore  Makefile  README.md  devenv.nix  docker-compose.yml  dune-project  sakura-mail.opam
lib/: dune
lib/account/: account.ml
lib/api/: api.ml  openapi.ml
lib/api/handlers/: account_handler.ml  api_common.ml  bulk_handler.ml  draft_handler.ml  health_handler.ml  log_handler.ml  mailbox_handler.ml  message_handler.ml  settings_handler.ml  sync_handler.ml  verify_handler.ml
lib/email/: email.ml
lib/imap/: mbsync.ml  mbsync_config.ml
lib/maildir/: maildir.ml
lib/query/: query.ml
lib/settings/: settings.ml
lib/sync/: sync.ml  sync_log.ml
lib/util/: util.ml
test/: dune  test_e2e.ml  test_sakura_mail.ml
test/seed/: package-lock.json  package.json  seed.mjs
